Part 1 done ish

--- a/CW1/code/Convolutional Encoding/Convolutional Encoding/Convolutional Encoding.vcxproj.filters
+++ b/CW1/code/Convolutional Encoding/Convolutional Encoding/Convolutional Encoding.vcxproj.filters
@@ -15,23 +15,14 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="generate.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="encoder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="common.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="test.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="generate.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="encoder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -41,8 +32,8 @@
     <ClCompile Include="test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="binaryFile.txt" />
   </ItemGroup>
 </Project>
