--- a/CW1/code/Convolutional Encoding/Convolutional Encoding/Convolutional Encoding.vcxproj
+++ b/CW1/code/Convolutional Encoding/Convolutional Encoding/Convolutional Encoding.vcxproj
@@ -120,15 +120,14 @@
   <ItemGroup>
     <ClInclude Include="common.h" />
     <ClInclude Include="encoder.h" />
-    <ClInclude Include="generate.h" />
-    <ClInclude Include="test.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="common.cpp" />
     <ClCompile Include="encoder.cpp" />
-    <ClCompile Include="generate.cpp" />
-    <ClCompile Include="Source.cpp" />
     <ClCompile Include="test.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="binaryFile.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
